# tagexec

./: Cargo.toml  README.md  README2.md
drop_caches/: Makefile  drop_caches.c
queries/join-order-benchmark/: 8a.sql  8c.sql  8d.sql
scripts/: pyproject.toml
scripts/scripts/: db.py  gen_synth_data.py  gen_test_data.py  imdb2db.py
src/: bin_utils.rs  bitmap.rs  cost.rs  data_dir.rs  db.rs  engine.rs  expr.rs  file_cache.rs  file_table.rs  funcs.rs  idx_cache.rs  lib.rs  parse.rs  pred.rs  query.rs  stats.rs  tag.rs  test_utils.rs  utils.rs
src/idx/: basic.rs  mod.rs  tagged.old.rs  tagged.rs  utils.rs
src/plan/: mod.rs
src/plan/disj/: mod.rs  utils.rs
src/plan/disj/basic/: conj.rs  core.rs  disj.rs  mod.rs  no_opt.rs
src/plan/disj/tagged/: combined.rs  conj_pushdown.rs  core.rs  iter_pushdown.rs  mod.rs  no_opt.rs  pullup.rs  pushdown.rs  spec.rs
src/plan/mqo/: basic.rs  tagged.rs  utils.rs
