[package]
name = "tagjoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1 # Used to get symbols when profiling

[dependencies]
approx = "0.5.1"
auto_enums = "0.8.1"
byteorder = "1.4.3"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.1.6"
delegate = "0.9.0"
either = "1.8.1"
fern = "0.6.1"
float-ord = "0.3.2"
futures = "0.3.25"
gethostname = "0.4.3"
glommio = "0.7.0"
itertools = "0.10.5"
libc = "0.2.139"
log = { version = "0.4.17", features = ["release_max_level_info"] }
memmap2 = "0.5.9"
num = "0.4.0"
num-traits = "0.2.15"
phf = { version = "0.11.1", features = ["macros"] }
pprof = { version = "0.11.1", features = ["flamegraph", "protobuf-codec"] }
pretty_assertions = "1.3.0"
priority-queue = "1.3.1"
regex = "1.7.1"
rmp-serde = "1.1.1"
roaring = "0.10.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.152", features = ["derive"] }
snowflake = "1.3.0"
split-iter = "0.1.0"
sqlparser = "0.35.0"
strum = "0.25.0"
strum_macros = "0.25.2"
tempfile = "3.3.0"
termtree = "0.4.0"
traversal = "0.1.2"
