[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlparse = "^0.4.3"
click = "^8.1.3"
clevercsv = "^0.7.5"
matplotlib = "^3.7.1"
pandas = "^1.5.3"


[tool.poetry.scripts]
gen-test-data = "scripts.gen_test_data:main"
imdb2db = "scripts.imdb2db:cli"
plot-job-exp = "scripts.plot_job_exp:cli"
gen-synth-data = "scripts.gen_synth_data:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
